terraform/rds.tf
resource "aws_db_subnet_group" "rds_subnets" {
  name = "rds-subnet-group"
  subnet_ids = [aws_subnet.private.id,
    aws_subnet.private_AZ1.id,
  aws_subnet.private_AZ2.id] # subnet from vpc.tf

  tags = {
    Name = "rds-subnet-group"
  }
}

resource "aws_security_group" "rds_sg" {
  name   = "rds-sg"
  vpc_id = aws_vpc.main.id

  # INGRESS = who can connect to the DB
  ingress {
    description = "Allow MySQL from App Subnet"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/24"] # TODO: use the SG of the EC2s here
  }
  # EGRESS = who can connect from the DB
  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"          # All protocols
    cidr_blocks = ["0.0.0.0/0"] # Allow all outbound traffic
  }
}

resource "aws_db_instance" "airflow_metadata_db" {
  allocated_storage      = 20
  storage_type           = "gp3"
  max_allocated_storage  = 20
  engine                 = "postgres"
  engine_version         = "17.4"
  instance_class         = "db.t3.micro"
  db_subnet_group_name   = aws_db_subnet_group.rds_subnets.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  username               = var.db_username
  password               = var.db_password
  db_name                = var.db_name
  skip_final_snapshot    = true
}
